Fo real this time

--- a/IDB3.html
+++ b/IDB3.html
@@ -8,7 +8,7 @@
 <td valign=bottom>&nbsp;<br>
 <font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>testmodels</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/nilo/Desktop/magicdbswe/app/testmodels.py">/v/filer4b/v38q001/nilo/Desktop/magicdbswe/app/testmodels.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/matthewm/WebApp/magicdbswe/app/testmodels.py">/v/filer4b/v38q001/matthewm/WebApp/magicdbswe/app/testmodels.py</a></font></td></tr></table>
     <p><tt>#&nbsp;A&nbsp;Database&nbsp;for&nbsp;Magic&nbsp;the&nbsp;Gathering&nbsp;Cards<br>
 #<br>
 #&nbsp;pylint:disable=invalid-name,line-too-long,no-member,too-few-public-methods,locally-disabled</tt></p>
@@ -71,7 +71,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fee8dd98080; MArtist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f673289d0f0; MArtist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('artists', MetaData(bind=None), Column('na...mSets', Integer(), table=&lt;artists&gt;), schema=None)</dl>
 
@@ -165,7 +165,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fee8dd74390; MCard&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f6732876400; MCard&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('cards', MetaData(bind=None), Column('card...Key('artists.name'), table=&lt;cards&gt;), schema=None)</dl>
 
@@ -243,7 +243,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fee8dd74b70; MSet&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f6732876be0; MSet&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;sets&gt;), schema=None)</dl>
 
@@ -309,7 +309,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fee8dd983c8; MSubtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f673289d438; MSubtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('subtypes', MetaData(bind=None), Column('n...Sets', Integer(), table=&lt;subtypes&gt;), schema=None)</dl>
 
@@ -347,7 +347,7 @@ Data descriptors inherited from <a href="flask_sqlalchemy.html#Model">flask_sqla
 <strong>STG_LEN</strong> = 12<br>
 <strong>TEXT_LEN</strong> = 1024<br>
 <strong>app</strong> = &lt;Flask 'testmodels'&gt;<br>
-<strong>db</strong> = &lt;SQLAlchemy engine=sqlite:////v/filer4b/v38q001/nilo/Desktop/magicdbswe/app/test&gt;<br>
+<strong>db</strong> = &lt;SQLAlchemy engine=sqlite:////v/filer4b/v38q001/matthewm/WebApp/magicdbswe/app/test&gt;<br>
 <strong>set_artist_table</strong> = Table('set_artist_table', MetaData(bind=None), C...s.name'), table=&lt;set_artist_table&gt;), schema=None)<br>
 <strong>set_subtype_table</strong> = Table('set_subtype_table', MetaData(bind=None), ....code'), table=&lt;set_subtype_table&gt;), schema=None)<br>
 <strong>subtype_table</strong> = Table('subtype_table', MetaData(bind=None), Colu...ds.cardId'), table=&lt;subtype_table&gt;), schema=None)</td></tr></table>
