added coverage to run-tests

--- a/IDB3.html
+++ b/IDB3.html
@@ -71,7 +71,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fdfd87794e0; MArtist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd245d0d470; MArtist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('artists', MetaData(bind=None), Column('na...mSets', Integer(), table=&lt;artists&gt;), schema=None)</dl>
 
@@ -165,7 +165,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fdfd87567f0; MCard&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd245ce87b8; MCard&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('cards', MetaData(bind=None), Column('card...Key('artists.name'), table=&lt;cards&gt;), schema=None)</dl>
 
@@ -243,7 +243,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fdfd8756fd0; MSet&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd245ce8f60; MSet&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;sets&gt;), schema=None)</dl>
 
@@ -309,7 +309,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fdfd8779828; MSubtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd245d0d7b8; MSubtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('subtypes', MetaData(bind=None), Column('n...Sets', Integer(), table=&lt;subtypes&gt;), schema=None)</dl>
 
